# VoiceControl

./: .gitattributes  .gitignore  README.md  config.deploy.yaml  config.yaml  mic.py  pcm_to_wav.py  pyproject.toml  rec.sh  requirements-robot.txt  requirements-server-py38.txt  requirements.txt  run.py  serial_reader.py  test.py
asr/: __init__.py  engine.py  ncnn_engine.py  ncnn_server.py  server.py
docs/: getting-started.md  go2-deploy.md  robot-production-deploy.md  rust-rewrite-checklist.md  rust-rewrite-kickoff.md  rust-rewrite-plan.md  rust-rewrite-status.md  ubuntu2204-rust-deploy.md  windows-rust-e2e.md
nlu/: __init__.py  engine.py  server.py
nlu/tokenizer/: tokenizer.json  tokenizer_config.json
pipeline/: __init__.py  asr_client.py  audio_preprocessor.py  cleaner.py  command_dispatcher.py  hardware_serial.py  main.py  nlu_client.py  onboard.py  respeaker.py  speaker.py  text_normalizer.py
scripts/: benchmark_inference.py  build_robot_deploy_bundle.bat  build_robot_deploy_bundle.ps1  compare_outputs.py  cross_build_voice_infer_linux.ps1  deploy.sh  deploy_jetson.sh  export_onnx_fp16.py  export_reference.py  install_robot_target.sh  mic_probe.py  package_deploy_bundle.ps1  package_voice_infer_linux.sh  record_playback.py  speaker_test.py  start_voice_infer_windows.ps1
tests/: test_asr_engine.py  test_command_dispatcher.py  test_nlu_engine.py  test_pipeline_imports.py  test_pipeline_main.py  test_text_normalizer.py
tests/fixtures/reference/asr/: embed_token100.npy  prompt_suffix_ids.json  transcribe_result.json
tests/fixtures/reference/mel/: hann_window.npy  mel_basis.npy  mel_config.json
tests/fixtures/reference/nlu/: encode_input.json  hidden_head.npy  predict_sit.json  predict_stop.json
unitree_webrtc_connect/: __init__.py  unitree_auth.py  unitree_cloud.py  webrtc_audio.py  webrtc_audiohub.py  webrtc_datachannel.py  webrtc_driver.py
unitree_webrtc_connect/msgs/: future_resolver.py  heartbeat.py  pub_sub.py
voice-infer/: Cargo.toml  README.md
voice-infer/src/: config.rs  main.rs
voice-infer/src/asr/: engine.rs  mod.rs  server.rs
voice-infer/src/audio/: mel.rs  mod.rs  wav.rs
voice-infer/src/nlu/: engine.rs  mod.rs  parser.rs  server.rs
voice-infer/tests/resources/reference/asr/: audio_features_head.npy  embed_token0.npy  init_logits_last.npy  prompt_prefix_ids.json
voice-infer/tests/resources/reference/mel/: full_mel.npy  input_wav.npy  log_mel_pre_norm.npy  power_frame0.npy
voice-infer/tests/resources/reference/nlu/: export_config.json  predict_cases.json  predict_forward.json
voice-infer/tests/resources/reference/parse/: cases.json
