[project]
name = "voice-control"
version = "1.0.0"
description = "宇树 Go2 EDU 机器狗语音控制系统：唤醒词 → VAD → ASR → NLU → 指令"
requires-python = ">=3.8,<3.11"
dependencies = [
    # ASR
    "onnxruntime==1.14.0",
    "soundfile>=0.13.1",
    "librosa>=0.11.0",
    "numpy>=1.24.0,<2",
    "python-speech-features>=0.6",
    # NLU
    "transformers",
    # Pipeline
    "sherpa-onnx==1.10.46",
    "webrtcvad",
    "setuptools>=68.0,<81",
    "sounddevice",
    "pyserial>=3.5",
    "aiohttp",
    "pyyaml>=6.0",
    # HTTP 服务
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asr*", "nlu*", "pipeline*"]
