[package]
name = "voice-infer"
version = "0.1.0"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.9", default-features = false, features = ["std", "ndarray", "tracing", "load-dynamic", "api-19"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hound = "3.5"
rubato = "0.15"
ndarray = "0.17"
rustfft = "6"
half = { version = "2", features = ["num-traits", "bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
memmap2 = "0.9"
regex = "1"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
ndarray-npy = "0.10"
